--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_redux: ^0.10.0 # Wrapper que integra Redux en los componentes
+  redux: ^5.0.0 # Manejo de estado global
+  flutter_redux_navigation: ^0.7.1 # Navegación entre rutas usando REDUX
+  form_validator: ^1.0.2 # Crea funciones para validar campos de formulario
+  http: ^0.13.4 # Para el uso de http
+  meta: ^1.7.0 # Escribir Getters y Setters
+  shared_preferences: ^2.0.13 # Almacenamiento de Datos en la APP de forma local
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +65,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/restaurant-background.jpg
+    - assets/icons/icon_duoc.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
